# PlanktonClassifier

./: .gitignore  README.md  README_EN.md  README_FR.md  pyproject.toml
pytorch_template_code/: .gitignore  README.md  best_models.yaml  config-mbnet.yaml  config-no-tmp.yaml  config-pretrained.yaml  config-pretrained2.yaml  config-sample-dgx.yaml  config-sample.yaml  config-wandb-sweep-dgx.yaml  config-wandb-sweep.yaml  job-alone.sbatch  job-dgx.sbatch  job.sbatch  old_job.sbatch  pyproject.toml  slurm-139401.out  slurm-139402.out  slurm-139403.out  slurm-139741.out  slurm-139770.out  slurm-139798.out  slurm-139858.out  slurm-139944.out  slurm-139962.out  slurm-140054.out  slurm-140058.out  slurm-141094.out  slurm-141110.out  slurm-141112.out  slurm-151425.out  slurm-156195.out  slurm-156197.out  submit-slurm-dgx-sweep.py  submit-slurm-dgx.py  submit-slurm-no-tmp.py  submit-slurm-sweep.py  submit-slurm.py  sweep-id-dgx.yaml  sweep-id.yaml  (+4 more)
pytorch_template_code/BESTMODEL/: config.json  dataset.py  run_training.slurm
pytorch_template_code/Legacy/: config-pretrained2.yaml  config-sample.yaml
pytorch_template_code/configs/: tmp0u4icsyr-config.yml  tmp0yw_wkqj-config.yml  tmp1lic_3my-config.yml  tmp20ykh7_z-config.yml  tmp28_4c9l2-config.yml  tmp2fhia3_v-config.yml  tmp2lr8hc4b-config.yml  tmp40vzpt3q-config.yml  tmp46c_xev2-config.yml  tmp4_7w8iu6-config.yml  tmp4mu8i6qx-config.yml  tmp4zsadhyk-config.yml  tmp6bmu6e_6-config.yml  tmp6kz19kty-config.yml  tmp6sznirpe-config.yml  tmp712eutad-config.yml  tmp7h1mkc30-config.yml  tmp7sn7ax_8-config.yml  tmp80mson9a-config.yml  (+92 more)
(+91 files in other folders)
