[project]
name = "torchtmpl"
version = "0.0.1"
requires-python = ">=3.10"

dependencies = [
    "PyYAML>=6.0",
    "torch>=1.13.1",
    "torchvision>=0.14.1",
    "torchinfo>=1.7.2",
    "wandb>=0.13.11",
    "scipy>=1.10.1",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.1",
    "kaggle>=1.7.4.5",
    "timm>=1.0.24",
    "transformers>=5.2.0",
    "scikit-learn>=1.7.2",
]

[options]
package_dir = "torchtmpl"

[tool.uv.workspace]
members = [
    "uv_deep_project",
]
